work around deprecation of Class.newInstance in jdk9+